--- a/index.html
+++ b/index.html
@@ -48,17 +48,25 @@
           <p>Don’t Miss These Latest Articles</p>
         </div> -->
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic saepe fugiat quae. Accusamus nobis atque excepturi vitae dolorem non, placeat libero qui nihil dicta voluptatibus. Eligendi possimus aut perspiciatis iure.
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic saepe fugiat quae. Accusamus nobis
+                        atque excepturi vitae dolorem non, placeat libero qui nihil dicta voluptatibus. Eligendi
+                        possimus aut perspiciatis iure.
                     </p>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste dolorem quidem placeat similique consequuntur adipisci saepe voluptates illo, enim, ad quis totam suscipit eius illum reiciendis eos sint vero minima.</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste dolorem quidem placeat similique
+                        consequuntur adipisci saepe voluptates illo, enim, ad quis totam suscipit eius illum reiciendis
+                        eos sint vero minima.</p>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ullam aspernatur molestiae mollitia deleniti? Porro nemo accusamus officiis, quas a nam blanditiis numquam voluptas, laboriosam aliquid deleniti quia? Ipsa, voluptate.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ullam aspernatur molestiae
+                        mollitia deleniti? Porro nemo accusamus officiis, quas a nam blanditiis numquam voluptas,
+                        laboriosam aliquid deleniti quia? Ipsa, voluptate.</p>
                 </div>
                 <div class="content">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, voluptates consequuntur maxime mollitia, architecto laborum cum laboriosam ipsam, ut impedit perferendis neque. Quam voluptas minus eligendi magnam! Hic, aliquid perspiciatis!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, voluptates consequuntur maxime
+                        mollitia, architecto laborum cum laboriosam ipsam, ut impedit perferendis neque. Quam voluptas
+                        minus eligendi magnam! Hic, aliquid perspiciatis!</p>
                 </div>
             </div>
             <div class="latest-posts">
@@ -82,19 +90,22 @@
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child2">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child3">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child4">
 
@@ -108,25 +119,29 @@
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child7">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child8">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child9">
                     <p>6 days ago</p>
                     <p class="community-title">Editorial Design Patterns With CSS Grid And Named Columns</p>
                     <p class="community-author">By Rachel Andrew</p>
-                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful features of Grid — features that become even more powerful when we introduce subgrids.</p>
+                    <p>By naming lines when setting up our CSS Grid layouts, we can tap into some interesting and useful
+                        features of Grid — features that become even more powerful when we introduce subgrids.</p>
                 </div>
                 <div class="child10">
                     <div class="community-box-child">
@@ -156,9 +171,15 @@
             </div>
             <div class="persons-achievements">
                 <h3>Person of the week</h3>
-                <p>Based in Mexico City, Pablo Stanley (@pablostanley) is a lead designer for InVision Studio Platform and co-founder of the tech-enabled healthcare provider Carbon Health. He shares his design knowledge as a speaker at events around the
-                    world, as well as in one-on-one workshops and in his design tutorials on YouTube. Advocating for more diversity in the design community and with the aim to inspire students and professionals from Latin America to pursue a career in
-                    design, Pablo co-hosts the podcast Diseño Cha Cha Chá where Spanish-speaking creatives talk about their work in the tech industry. When he’s not doing any of this, Pablo loves to draw comics. Thank you for everything you do for the
+                <p>Based in Mexico City, Pablo Stanley (@pablostanley) is a lead designer for InVision Studio Platform
+                    and co-founder of the tech-enabled healthcare provider Carbon Health. He shares his design knowledge
+                    as a speaker at events around the
+                    world, as well as in one-on-one workshops and in his design tutorials on YouTube. Advocating for
+                    more diversity in the design community and with the aim to inspire students and professionals from
+                    Latin America to pursue a career in
+                    design, Pablo co-hosts the podcast Diseño Cha Cha Chá where Spanish-speaking creatives talk about
+                    their work in the tech industry. When he’s not doing any of this, Pablo loves to draw comics. Thank
+                    you for everything you do for the
                     design community, dear Pablo!</p>
             </div>
         </div>
@@ -171,7 +192,9 @@
                 <div class="article">
                     <h3>George Kvasnikov wrote</h3>
                     <h4> Minimalist Video Player</h4>
-                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports
+                        videos from Vimeo and Dropbox.
                     </p>
 
                 </div>
@@ -183,7 +206,9 @@
                 <div class="article">
                     <h3>George Kvasnikov wrote</h3>
                     <h4> Minimalist Video Player</h4>
-                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports
+                        videos from Vimeo and Dropbox.
                     </p>
 
                 </div>
@@ -195,7 +220,9 @@
                 <div class="article">
                     <h3>George Kvasnikov wrote</h3>
                     <h4> Minimalist Video Player</h4>
-                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports
+                        videos from Vimeo and Dropbox.
                     </p>
 
                 </div>
@@ -207,7 +234,9 @@
                 <div class="article">
                     <h3>George Kvasnikov wrote</h3>
                     <h4> Minimalist Video Player</h4>
-                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports
+                        videos from Vimeo and Dropbox.
                     </p>
 
                 </div>
@@ -219,7 +248,9 @@
                 <div class="article">
                     <h3>George Kvasnikov wrote</h3>
                     <h4> Minimalist Video Player</h4>
-                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports
+                        videos from Vimeo and Dropbox.
                     </p>
 
                 </div>
@@ -231,7 +262,9 @@
                 <div class="article">
                     <h3>George Kvasnikov wrote</h3>
                     <h4> Minimalist Video Player</h4>
-                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports videos from Vimeo and Dropbox.
+                    <p>october 9, 2019 — If you’re looking for a sleek web video player without branding and quality
+                        loss, OneLinePlayer is for you. Created by George Kvasnikov and Dmitry Kiselev, it supports
+                        videos from Vimeo and Dropbox.
                     </p>
 
                 </div>
@@ -242,7 +275,9 @@
             <!-- <div style="display: flex; flex-direction: column;"></div> -->
             <h6>Featured smashing Book</h6>
             <a href="#">Design Systems</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.
             </p>
             <div>
                 <div class="table-of-content"></div>
@@ -323,45 +358,60 @@
             </span>
             <div class="footer-links-options">
                 <ul>
-                    <li>Accessibility</li>
-                    <li>Androids</li>
-                    <li>Animations</li>
-                    <li>Apps</li>
-                    <li>CSS</li>
-                    <li>Design</li>
-                    <li>Pattern</li>
-                    <li>Design Systems</li>
-                    <li>E-Commerce</li>
-                    <li>Freebies</li>
-                    <li>Graphics</li>
-                    <li>HTML</li>
-                    <li>illustrator</li>
-                    <li>iOS</li>
-                    <li>JavaScript</li>
-                    <li>Mobile</li>
-                    <li>Pattern Libraries</li>
-                    <li>Performance</li>
-                    <li>Photoshop</li>
-                    <li>Plugins</li>
-                    <li>React</li>
-                    <li>Responsive Web Design</li>
-                    <li>Service workers</li>
-                    <li>Sketch</li>
-                    <li>Typography</li>
-                    <li>UI</li>
-                    <li>Usability</li>
-                    <li>User Experience</li>
-                    <li>Wallpapers</li>
-                    <li>Web Design</li>
-                    <li>Wordpress</li>
-                    <li>Workflow</li>
+                    <li class="link">Accessibility</li>
+                    <li class="link">Androids</li>
+                    <li class="link">Animations</li>
+                    <li class="link">Apps</li>
+                    <li class="link">CSS</li>
+                    <li class="link">Design</li>
+                    <li class="link">Pattern</li>
+                    <li class="link">Design Systems</li>
+                    <li class="link">E-Commerce</li>
+                    <li class="link">Freebies</li>
+                    <li class="link">Graphics</li>
+                    <li class="link">HTML</li>
+                    <li class="link">illustrator</li>
+                    <li class="link">iOS</li>
+                    <li class="link">JavaScript</li>
+                    <li class="link">Mobile</li>
+                    <li class="link">Pattern Libraries</li>
+                    <li class="link">Performance</li>
+                    <li class="link">Photoshop</li>
+                    <li class="link">Plugins</li>
+                    <li class="link">React</li>
+                    <li class="link">Responsive Web Design</li>
+                    <li class="link">Service workers</li>
+                    <li class="link">Sketch</li>
+                    <li class="link">Typography</li>
+                    <li class="link">UI</li>
+                    <li class="link">Usability</li>
+                    <li class="link">User Experience</li>
+                    <li class="link">Wallpapers</li>
+                    <li class="link">Web Design</li>
+                    <li class="link">Wordpress</li>
+                    <li class="link">Workflow</li>
                 </ul>
             </div>
             <div class="footer-links about-us">
+                <p>Web DesignWordPressWorkflow
+                    With a commitment to quality content for the design community. <br>
 
+                    Founded by Vitaly Friedman and Sven Lennartz. 2006–2019. <br>
+
+                    Smashing is proudly running on Netlify. <br>
+
+                    Fonts by Latinotype.</p>
             </div>
             <div class="footer-links contact-us">
-
+                <ul>
+                    <li><a href="#">Write for us</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">About us(Impressum)</a></li>
+                    <li><a href="#">Privacy policy</a></li> <br>
+                    <li><a href="#">Membership login</a></li>
+                    <li><a href="#">Delivery times</a></li>
+                    <li><a href="#">Advertise</a></li>
+                </ul>
             </div>
 
         </div>
